Ajout des fichiers HTML dans le dossier public pour le déploiement sur GitHub Pages.

--- a/public/analyse-fraude.html
+++ b/public/analyse-fraude.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Analyse de Fraude | Nina Lemoine</title>
-    <link href="css/tailwind.min.css" rel="stylesheet">
+    <title>Analyse de Fraude - Nina LEMOINE</title>
     <style>
         :root {
             --peach: #FCE9D9;
@@ -13,87 +12,122 @@
             --terracotta: #D66853;
         }
         body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--peach);
             color: var(--brown);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-        .bg-peach { background-color: var(--peach); }
-        .bg-brown { background-color: var(--brown); }
-        .bg-dark-brown { background-color: var(--dark-brown); }
-        .bg-terracotta { background-color: var(--terracotta); }
-        .text-brown { color: var(--brown); }
-        .text-dark-brown { color: var(--dark-brown); }
-        .text-terracotta { color: var(--terracotta); }
-        .border-terracotta { border-color: var(--terracotta); }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            color: var(--terracotta);
+            text-decoration: none;
+            font-weight: 500;
+            margin-bottom: 30px;
+            transition: transform 0.3s ease;
+        }
+        .back-link:hover {
+            transform: translateX(-5px);
+        }
+        .back-link::before {
+            content: '←';
+            margin-right: 8px;
+            font-size: 1.2em;
+        }
+        h1 {
+            color: var(--dark-brown);
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .project-content {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section-title {
+            color: var(--terracotta);
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        li::before {
+            content: '→';
+            position: absolute;
+            left: 0;
+            color: var(--terracotta);
+        }
+        .project-title {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container mx-auto px-4 py-12 max-w-4xl">
-        <a href="../portfolio-nina.html" class="inline-flex items-center text-brown hover:text-terracotta transition-colors mb-8">
-            ← Retour à l'accueil
-        </a>
+    <div class="container">
+        <a href="portfolio-v2.html#projects" class="back-link">Retour au portfolio</a>
+        
+        <div class="project-header">
+            <h1 class="project-title">🤖 Projet Analyse de Fraude – Automatisation de la détection dans Google Sheets</h1>
+        </div>
 
-        <div class="bg-white p-8 rounded-xl shadow-md">
-            <!-- En-tête du projet -->
-            <div class="flex items-start gap-6 mb-8">
-                <div class="text-5xl">🤖</div>
-                <div>
-                    <h1 class="text-4xl font-bold text-dark-brown mb-3">Analyse de Fraude</h1>
-                    <p class="text-xl text-brown">Automatisation de détection via AppScript</p>
-                </div>
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Description</h2>
+                <p>Script d'analyse intelligente pour identifier des fraudes d'accès badge dans un espace sécurisé.</p>
             </div>
 
-            <!-- Tagline -->
-            <div class="mb-6">
-                <p class="text-lg text-brown">Script d'analyse intelligente pour identifier des fraudes d'accès badge dans un espace sécurisé.</p>
+            <div class="project-section">
+                <h2>🎯 Défi</h2>
+                <p>Détecter les fraudes dans un historique de logs sans solution logicielle externe.</p>
             </div>
 
-            <!-- Défi -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🎯 Défi</h2>
-                <p class="text-brown">Détecter les fraudes dans un historique de logs sans solution logicielle externe.</p>
-            </div>
-
-            <!-- Approche -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🧠 Approche</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Développement d'un algorithme dans Google Apps Script basé sur deux patterns de fraude :</li>
-                    <li class="text-brown">Entrées consécutives sans sortie : détection des membres qui badgent plusieurs fois sans sortie intermédiaire.</li>
-                    <li class="text-brown">Déséquilibre entrées/sorties : détection de comportements suspects par un nombre d'entrées bien supérieur aux sorties.</li>
+            <div class="project-section">
+                <h2>🧠 Approche</h2>
+                <ul>
+                    <li><strong>Entrées consécutives sans sortie</strong> : détection des membres qui badgent plusieurs fois sans sortie intermédiaire.</li>
+                    <li><strong>Déséquilibre entrées/sorties</strong> : détection de comportements suspects par un nombre d'entrées bien supérieur aux sorties.</li>
                 </ul>
             </div>
 
-            <!-- Solution -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🛠️ Solution technique</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Script Google Apps Script capable de :</li>
-                    <li class="text-brown">Lire, trier et analyser des milliers de lignes de logs.</li>
-                    <li class="text-brown">Identifier automatiquement les schémas frauduleux.</li>
-                    <li class="text-brown">Générer deux rapports : "Fraudeurs" (données brutes) et "Résumé Fraudeurs" (interprétation intelligente).</li>
+            <div class="project-section">
+                <h2>🛠️ Solution technique</h2>
+                <ul>
+                    <li>Script Google Apps Script capable de lire, trier et analyser des milliers de lignes de logs.</li>
+                    <li>Identification automatique des schémas frauduleux.</li>
+                    <li>Génération de deux rapports :
+                        <ul>
+                            <li><strong>"Fraudeurs"</strong> : données brutes</li>
+                            <li><strong>"Résumé Fraudeurs"</strong> : interprétation intelligente</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
 
-            <!-- Ce que j'ai appris -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🧩 Ce que j'ai appris</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Création d'algorithmes conditionnels puissants.</li>
-                    <li class="text-brown">Manipulation avancée de données dans Google Sheets et Appscript.</li>
-                    <li class="text-brown">Mise en place d'un système autonome, reproductible et interprétable.</li>
+            <div class="project-section">
+                <h2>🧩 Ce que j'ai appris</h2>
+                <ul>
+                    <li>Création d'algorithmes conditionnels puissants</li>
+                    <li>Manipulation avancée de données dans Google Sheets et App Script</li>
+                    <li>Mise en place d'un système autonome, reproductible et interprétable</li>
                 </ul>
-            </div>
-
-            <!-- Technologies -->
-            <div class="mt-8">
-                <h2 class="text-xl font-bold text-dark-brown mb-3">Technologies & Compétences</h2>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Google Apps Script</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Analyse de données</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Détection de fraude</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Automatisation</span>
-                </div>
             </div>
         </div>
     </div>
