--- a/public/etre-soi.html
+++ b/public/etre-soi.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet "Être soi" | Nina Lemoine</title>
-    <link href="css/tailwind.min.css" rel="stylesheet">
+    <title>Projet Être soi - Nina LEMOINE</title>
     <style>
         :root {
             --peach: #FCE9D9;
@@ -13,89 +12,113 @@
             --terracotta: #D66853;
         }
         body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--peach);
             color: var(--brown);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-        .bg-peach { background-color: var(--peach); }
-        .bg-brown { background-color: var(--brown); }
-        .bg-dark-brown { background-color: var(--dark-brown); }
-        .bg-terracotta { background-color: var(--terracotta); }
-        .text-brown { color: var(--brown); }
-        .text-dark-brown { color: var(--dark-brown); }
-        .text-terracotta { color: var(--terracotta); }
-        .border-terracotta { border-color: var(--terracotta); }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            color: var(--terracotta);
+            text-decoration: none;
+            font-weight: 500;
+            margin-bottom: 30px;
+            transition: transform 0.3s ease;
+        }
+        .back-link:hover {
+            transform: translateX(-5px);
+        }
+        .back-link::before {
+            content: '←';
+            margin-right: 8px;
+            font-size: 1.2em;
+        }
+        h1 {
+            color: var(--dark-brown);
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .project-content {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section-title {
+            color: var(--terracotta);
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        li::before {
+            content: '→';
+            position: absolute;
+            left: 0;
+            color: var(--terracotta);
+        }
+        .project-title {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container mx-auto px-4 py-12 max-w-4xl">
-        <a href="../portfolio-nina.html" class="inline-flex items-center text-brown hover:text-terracotta transition-colors mb-8">
-            ← Retour à l'accueil
-        </a>
+    <div class="container">
+        <a href="portfolio-v2.html#projects" class="back-link">Retour au portfolio</a>
+        
+        <div class="project-header">
+            <h1 class="project-title">🌈 Projet Être Soi – Plateforme pour HPI & Hypersensibles</h1>
+            <p><a href="https://ninalemoine.github.io/Etre-Soi/" style="color: var(--terracotta); text-decoration: none;">🔗 Voir le projet en ligne</a></p>
+        </div>
 
-        <div class="bg-white p-8 rounded-xl shadow-md">
-            <!-- En-tête du projet -->
-            <div class="flex items-start gap-6 mb-8">
-                <div class="text-5xl">🌈</div>
-                <div>
-                    <h1 class="text-4xl font-bold text-dark-brown mb-3">Projet "Être soi"</h1>
-                    <p class="text-xl text-brown">Développement Neuroatypique</p>
-                </div>
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Créer un espace bienveillant</h2>
+                <p>Créer un espace bienveillant pour les jeunes à haut potentiel intellectuel et hypersensibles.</p>
             </div>
 
-            <!-- Tagline -->
-            <div class="mb-6">
-                <p class="text-lg text-brown">Créer un espace bienveillant pour les jeunes à haut potentiel intellectuel et hypersensibles.</p>
+            <div class="project-section">
+                <h2>🧭 Objectif</h2>
+                <p>Faciliter l'identification, le développement personnel et l'entraide entre profils neuroatypiques (HPI, hypersensibles).</p>
             </div>
 
-            <!-- URL -->
-            <div class="mb-6">
-                <p class="font-bold text-terracotta text-lg">🔗 Voir le projet en ligne</p>
-            </div>
-
-            <!-- Objectif -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🧭 Objectif</h2>
-                <p class="text-brown">Faciliter l'identification, le développement personnel et l'entraide entre profils neuroatypiques (HPI, hypersensibles).</p>
-            </div>
-
-            <!-- Solutions -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🛠️ Solutions proposées</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Création d'un test en ligne accessible pour l'auto-évaluation HPI</li>
-                    <li class="text-brown">Lancement d'une communauté digitale d'entraide</li>
-                    <li class="text-brown">Développement d'outils pédagogiques (podcast, mini-guides, ateliers)</li>
+            <div class="project-section">
+                <h2>🛠️ Solutions proposées</h2>
+                <ul>
+                    <li>Création d'un test en ligne accessible pour l'auto-évaluation HPI</li>
+                    <li>Lancement d'une communauté digitale d'entraide</li>
+                    <li>Développement d'outils pédagogiques (podcast, mini-guides, ateliers)</li>
                 </ul>
             </div>
 
-            <!-- Origine -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">💡 Origine du projet</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Inspiré par l'histoire de ma mère, sous-estimée dans sa scolarité malgré son haut potentiel.</li>
-                    <li class="text-brown">Motivation profonde : rendre visibles et légitimes les talents invisibles.</li>
-                </ul>
+            <div class="project-section">
+                <h2>💡 Origine du projet</h2>
+                <p>Inspiré par l'histoire de ma mère, sous-estimée dans sa scolarité malgré son haut potentiel.</p>
+                <p>Motivation profonde : rendre visibles et légitimes les talents invisibles.</p>
             </div>
 
-            <!-- Vision -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🌱 Vision</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Court terme : podcasts, guides éducatifs</li>
-                    <li class="text-brown">Long terme : structure de mentorat ou coaching collectif</li>
-                </ul>
-            </div>
-
-            <!-- Technologies -->
-            <div class="mt-8">
-                <h2 class="text-xl font-bold text-dark-brown mb-3">Compétences utilisées</h2>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Communication</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Psychologie</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Création de contenu</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Développement personnel</span>
-                </div>
+            <div class="project-section">
+                <h2>🌱 Vision</h2>
+                <p><strong>Court terme :</strong> podcasts, guides éducatifs</p>
+                <p><strong>Long terme :</strong> structure de mentorat ou coaching collectif</p>
             </div>
         </div>
     </div>
