--- a/public/go-fusion.html
+++ b/public/go-fusion.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Go Fusion | Nina Lemoine</title>
-    <link href="css/tailwind.min.css" rel="stylesheet">
+    <title>BDD Go Fusion - Nina LEMOINE</title>
     <style>
         :root {
             --peach: #FCE9D9;
@@ -13,86 +12,108 @@
             --terracotta: #D66853;
         }
         body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--peach);
             color: var(--brown);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-        .bg-peach { background-color: var(--peach); }
-        .bg-brown { background-color: var(--brown); }
-        .bg-dark-brown { background-color: var(--dark-brown); }
-        .bg-terracotta { background-color: var(--terracotta); }
-        .text-brown { color: var(--brown); }
-        .text-dark-brown { color: var(--dark-brown); }
-        .text-terracotta { color: var(--terracotta); }
-        .border-terracotta { border-color: var(--terracotta); }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            color: var(--terracotta);
+            text-decoration: none;
+            font-weight: 500;
+            margin-bottom: 30px;
+            transition: transform 0.3s ease;
+        }
+        .back-link:hover {
+            transform: translateX(-5px);
+        }
+        .back-link::before {
+            content: '←';
+            margin-right: 8px;
+            font-size: 1.2em;
+        }
+        h1 {
+            color: var(--dark-brown);
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .project-content {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section-title {
+            color: var(--terracotta);
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        li::before {
+            content: '→';
+            position: absolute;
+            left: 0;
+            color: var(--terracotta);
+        }
+        .project-title {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container mx-auto px-4 py-12 max-w-4xl">
-        <a href="../portfolio-nina.html" class="inline-flex items-center text-brown hover:text-terracotta transition-colors mb-8">
-            ← Retour à l'accueil
-        </a>
+    <div class="container">
+        <a href="portfolio-v2.html#projects" class="back-link">Retour au portfolio</a>
+        
+        <div class="project-header">
+            <h1 class="project-title">🌱 Projet Go Fusion – Gagnante du Hackathon RSE & Tech</h1>
+            <p><a href="https://github.com/noahsgds/green-challenge-hub" style="color: var(--terracotta); text-decoration: noe;">🔗 Voir le projet sur Github</a></p>
+        </div>
 
-        <div class="bg-white p-8 rounded-xl shadow-md">
-            <!-- En-tête du projet -->
-            <div class="flex items-start gap-6 mb-8">
-                <div class="text-5xl">🌱</div>
-                <div>
-                    <h1 class="text-4xl font-bold text-dark-brown mb-3">Projet Go Fusion</h1>
-                    <p class="text-xl text-brown">Gagnante du Hackathon RSE & Tech - La transparence au service de l'engagement environnemental.</p>
-                </div>
+        <div class="project-content">
+            <div class="project-section">
+                <h2>La transparence au service de l'engagement environnemental</h2>
+                <p>🏆 <strong>Victoire au Hackathon Go Fusion</strong></p>
+                <p>💡 <strong>Objectif du challenge :</strong> Réinventer l'image de marque et la stratégie digitale de Go Fusion, une startup qui veut rendre l'engagement RSE des entreprises plus concret, visible… et même ludique.</p>
+                <p>🛠️ <strong>Notre solution :</strong> Création d'un <strong>simulateur d'émissions de CO₂</strong> directement intégré à la landing page de l'entreprise. ➡️ Le simulateur est <strong>interactif et dynamique</strong> : il affiche en temps réel l'impact environnemental d'un service en fonction des caractéristiques de l'entreprise.</p>
             </div>
 
-            <!-- Award -->
-            <div class="mb-6">
-                <p class="font-bold text-terracotta text-lg">🏆 Victoire au Hackathon Go Fusion</p>
-            </div>
-
-            <!-- Objectif -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">💡 Objectif du challenge</h2>
-                <p class="text-brown">Réinventer l'image de marque et la stratégie digitale de Go Fusion, une startup qui veut rendre l'engagement RSE des entreprises plus concret, visible… et même ludique.</p>
-            </div>
-
-            <!-- Solution -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🛠️ Notre solution</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Création d'un simulateur d'émissions de CO₂ directement intégré à la landing page de l'entreprise.</li>
-                    <li class="text-brown">➡️ Le simulateur est interactif et dynamique : il affiche en temps réel l'impact environnemental d'un service en fonction des caractéristiques de l'entreprise.</li>
+            <div class="project-section">
+                <h2>Pourquoi c'est puissant ?</h2>
+                <ul>
+                    <li>Fini les discours flous : place aux <strong>chiffres transparents</strong></li>
+                    <li>L'outil <strong>éduque</strong>, engage et incite à l'action</li>
+                    <li>Il s'intègre naturellement dans une <strong>stratégie de marque responsable</strong></li>
                 </ul>
             </div>
 
-            <!-- Impact -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🎯 Pourquoi c'est puissant ?</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Fini les discours flous : place aux chiffres transparents</li>
-                    <li class="text-brown">L'outil éduque, engage et incite à l'action</li>
-                    <li class="text-brown">Il s'intègre naturellement dans une stratégie de marque responsable</li>
-                </ul>
+            <div class="project-section">
+                <h2>Mon rôle</h2>
+                <p>💬 Conception du simulateur (UX/UI), cadrage RSE, storytelling produit, stratégie d'engagement utilisateurs.</p>
             </div>
 
-            <!-- Mon rôle -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">💬 Mon rôle</h2>
-                <p class="text-brown">Conception du simulateur (UX/UI), cadrage RSE, storytelling produit, stratégie d'engagement utilisateurs.</p>
-            </div>
-
-            <!-- Témoignage -->
-            <div class="bg-peach p-6 rounded-lg border border-terracotta">
-                <p class="text-brown italic">🌟 Ce que j'ai adoré dans ce projet : l'alliance parfaite entre technologie, impact environnemental et gamification.</p>
-            </div>
-
-            <!-- Technologies -->
-            <div class="mt-8">
-                <h2 class="text-xl font-bold text-dark-brown mb-3">Technologies & Compétences</h2>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">UX/UI Design</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Développement Durable</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Stratégie RSE</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Storytelling</span>
-                </div>
+            <div class="project-section">
+                <h2>Ce que j'ai adoré dans ce projet</h2>
+                <p>🌟 L'alliance parfaite entre <strong>technologie, impact environnemental et gamification</strong>.</p>
             </div>
         </div>
     </div>
