--- a/public/malt-mistral-make.html
+++ b/public/malt-mistral-make.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projet Make x Mistral x Malt | Nina Lemoine</title>
-    <link href="css/tailwind.min.css" rel="stylesheet">
+    <title>Make x Mistral x Malt - Nina LEMOINE</title>
     <style>
         :root {
             --peach: #FCE9D9;
@@ -13,82 +12,114 @@
             --terracotta: #D66853;
         }
         body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background-color: var(--peach);
             color: var(--brown);
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
         }
-        .bg-peach { background-color: var(--peach); }
-        .bg-brown { background-color: var(--brown); }
-        .bg-dark-brown { background-color: var(--dark-brown); }
-        .bg-terracotta { background-color: var(--terracotta); }
-        .text-brown { color: var(--brown); }
-        .text-dark-brown { color: var(--dark-brown); }
-        .text-terracotta { color: var(--terracotta); }
-        .border-terracotta { border-color: var(--terracotta); }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+        .back-link {
+            display: inline-flex;
+            align-items: center;
+            color: var(--terracotta);
+            text-decoration: none;
+            font-weight: 500;
+            margin-bottom: 30px;
+            transition: transform 0.3s ease;
+        }
+        .back-link:hover {
+            transform: translateX(-5px);
+        }
+        .back-link::before {
+            content: '←';
+            margin-right: 8px;
+            font-size: 1.2em;
+        }
+        h1 {
+            color: var(--dark-brown);
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        .project-content {
+            background: white;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+        .section-title {
+            color: var(--terracotta);
+            font-size: 1.5rem;
+            margin-bottom: 15px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding-left: 20px;
+            position: relative;
+        }
+        li::before {
+            content: '→';
+            position: absolute;
+            left: 0;
+            color: var(--terracotta);
+        }
+        .project-title {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
-    <div class="container mx-auto px-4 py-12 max-w-4xl">
-        <a href="../portfolio-nina.html" class="inline-flex items-center text-brown hover:text-terracotta transition-colors mb-8">
-            ← Retour à l'accueil
-        </a>
+    <div class="container">
+        <a href="portfolio-v2.html#projects" class="back-link">Retour au portfolio</a>
+        
+        <div class="project-header">
+            <h1 class="project-title">🤝 Projet Malt x Mistral AI x Make – Ultra Personnalisation des prospects</h1>
+        </div>
 
-        <div class="bg-white p-8 rounded-xl shadow-md">
-            <!-- En-tête du projet -->
-            <div class="flex items-start gap-6 mb-8">
-                <div class="text-5xl">🤝</div>
-                <div>
-                    <h1 class="text-4xl font-bold text-dark-brown mb-3">Projet Make x Mistral x Malt</h1>
-                    <p class="text-xl text-brown">Projet d'ultra personnalisation des campagnes</p>
-                </div>
+        <div class="project-content">
+            <div class="project-section">
+                <h2>Description</h2>
+                <p>Conception d'un outil intelligent pour répondre à un vrai besoin business en un temps record.</p>
             </div>
 
-            <!-- Award -->
-            <div class="mb-6">
-                <p class="font-bold text-terracotta text-lg">🏆 Finaliste du projet MMM</p>
+            <div class="project-section">
+                <h2>🏆 Finaliste du projet MMM</h2>
             </div>
 
-            <!-- Tagline -->
-            <div class="mb-6">
-                <p class="text-lg text-brown">Conception d'un outil intelligent pour répondre à un vrai besoin business en un temps record.</p>
-            </div>
-
-            <!-- Challenge -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🚀 Challenge</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Répondre à une problématique business sur l'ultra personnalisation des campagnes réelle posée par l'entreprise Malt en 48h, en combinant :</li>
-                    <li class="text-brown">No-code (via Make)</li>
-                    <li class="text-brown">Intelligence artificielle (via Mistral AI)</li>
-                    <li class="text-brown">Automatisation métier</li>
+            <div class="project-section">
+                <h2>🚀 Challenge</h2>
+                <p>Répondre à une problématique business sur l'ultra personnalisation des campagnes en 48h, posée par l'entreprise Malt, en combinant :</p>
+                <ul>
+                    <li>No-code (via Make)</li>
+                    <li>Intelligence artificielle (via Mistral AI)</li>
+                    <li>Automatisation métier</li>
                 </ul>
             </div>
 
-            <!-- Méthodologie -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🧪 Méthodologie</h2>
-                <ul class="space-y-2">
-                    <li class="text-brown">Étude du besoin, cadrage fonctionnel</li>
-                    <li class="text-brown">Création de workflows intelligents et automatisés</li>
-                    <li class="text-brown">Intégration de Mistral AI pour enrichir les données et personnaliser l'expérience</li>
+            <div class="project-section">
+                <h2>🧪 Méthodologie</h2>
+                <ul>
+                    <li>Étude du besoin, cadrage fonctionnel</li>
+                    <li>Création de workflows intelligents et automatisés</li>
+                    <li>Intégration de Mistral AI pour enrichir les données et personnaliser l'expérience</li>
                 </ul>
             </div>
 
-            <!-- Résultat -->
-            <div class="mb-8">
-                <h2 class="text-2xl font-bold text-dark-brown mb-3">🌟 Résultat</h2>
-                <p class="text-brown">Un prototype fonctionnel combinant IA et automatisation, jugé parmi les meilleurs projets du hackathon par un jury professionnel (Malt, Make, Mistral).</p>
-            </div>
-
-            <!-- Technologies -->
-            <div class="mt-8">
-                <h2 class="text-xl font-bold text-dark-brown mb-3">Technologies & Compétences</h2>
-                <div class="flex flex-wrap gap-2">
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Make (Integromat)</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Mistral AI</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">No-code</span>
-                    <span class="px-3 py-1 bg-peach text-brown rounded-full text-sm">Automatisation marketing</span>
-                </div>
+            <div class="project-section">
+                <h2>🌟 Résultat</h2>
+                <p>Un prototype fonctionnel combinant IA et automatisation, jugé parmi les meilleurs projets du hackathon par un jury professionnel (Malt, Make, Mistral).</p>
             </div>
         </div>
     </div>
